Migrate to JDK 1.8